# python-piscine

Python-0-Startingg/ex00/: Hello.py
Python-0-Startingg/ex01/: format_ft_time.py
Python-0-Startingg/ex02/: find_ft_type.py  test.py
Python-0-Startingg/ex03/: NULL_not_found.py
Python-0-Startingg/ex04/: whatis.py
Python-0-Startingg/ex05/: building.py
Python-0-Startingg/ex06/: filterstring.py  ft_filter.py
Python-0-Startingg/ex07/: sos.py
Python-0-Startingg/ex08/: Loading.py  test.py
Python-0-Startingg/ex09/: README.md  ft_package.py  pyproject.toml
Python-1-Array/: animal.jpeg:Zone.Identifier  landscape.jpg:Zone.Identifier
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py  test.py
Python-1-Array/ex02/: load_image.py
Python-1-Array/ex03/: zoom.py
Python-1-Array/ex04/: rotate.py
Python-1-Array/ex05/: load_image.py  pimp_image.py
Python-2-Database/ex01/: aff_life.py  load_csv.py
Python-2-Database/ex02/: aff_pop.py
Python-2-Database/ex03/: projection_life.py
Python-3-OOP/ex00/: S1E9.py
Python-3-OOP/ex01/: S1E7.py
Python-3-OOP/ex02/: DiamondTrap.py
Python-3-OOP/ex03/: ft_calculator.py  test.py
Python-3-OOP/ex04/: ft_calculator.py
Python-4-DOD/ex00/: statistics.py
Python-4-DOD/ex01/: in_out.py
Python-4-DOD/ex02/: callLimit.py
Python-4-DOD/ex03/: new_student.py
