[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
	{ name="Lucas", email="denglucasyijin@gmail.com"},
]
description = "A small ex09 package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Deng-Yi-Jin/python-piscine/tree/main/Python-0-Startingg/ex09"
"Bug Tracker" = "https://github.com/Deng-Yi-Jin/python-piscine/issues"
